sonar fixes
git-svn-id: https://svn.imatia.com/ontimize/ontimize-jee/trunk@3332 c65a67e3-ea31-493c-9319-7ebef4ec2fa5